[package]
name = "embedded_00000001"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
stm32f4xx-hal = { version = "0.17", features = ["stm32f411"] }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
lto = true
panic = "abort"

[[bin]]
name = "main"
path = "src/main.rs"